fixed overflowing efects on phone and made the cards clickable with a link to the designated thing

--- a/style.css
+++ b/style.css
@@ -21,8 +21,11 @@ body {
   font-family: Andale mono;
   src: url(font/andale-mono-2.zip);
 }
-.top, .skills, .project-heading {
+.top, .skills {
   scroll-snap-align: start;
+}
+.project-heading{
+  scroll-snap-align: center;
 }
 .hamburger-menu{
   display: none;
@@ -280,7 +283,7 @@ li:first-child {
   color: white;
   font-size: 4vw;
   margin-left: 37vw;
-  padding-top: 20vh;
+  margin-top: 26vh;
 }
 .project-heading-2 {
   color: white;
@@ -726,8 +729,11 @@ footer .footer-social a {
   }
   .project-heading{
     font-size: 10vw;
-    margin-top: 15vh;
+    margin-top: 40vh;
     margin-left: 27vw;
+  }
+  .project-heading-container p{
+    margin-top: -45vh;
   }
   .projects{
     transform: scale(200%);
@@ -785,12 +791,16 @@ footer .footer-social a {
     margin-left: -12vw;
     padding-bottom: 9vw;
   }
+  .aboutme-container p{
+    font-size: 3vw;
+    width: 80%;
+  }
   .playlist-container h1{
     font-size: 10vw;
   }
   .project-container{
     margin-bottom: 63vh;
-    margin-top: 35vh;
+    margin-top: 80vh;
 
   }
   .right-project-card-column{
